# ableton-asd-parser

./: .gitignore  README.md  pyproject.toml
ableton_asd_parser/: __init__.py  __main__.py  cli.py  header.py  instances.py  markers.py  model.py  parse.py  reader.py  schema.py  schema_types.py
scripts/: battle_test.py
tests/: regenerate_manifest.py  test_fixtures.py  test_parser.py
tests/fixtures/: 1-Audio 0001 [2026-06-02 144044].wav.asd  1-Audio 0001 [2026-06-02 144048].wav.asd  1-Audio 0004 [2026-06-02 144153].wav.asd  1-Audio 0008 [2026-06-02 144552].wav.asd  10-Audio 0001 [2026-06-03 163653].wav.asd  2-Audio 0004 [2026-06-02 145711].wav.asd  3-Audio 0003 [2026-06-02 151327].wav.asd  3-Audio 0005 [2026-06-02 151808].wav.asd  35-Audio 0004 [2026-06-07 163812].wav.asd  6-Audio 0004 [2026-06-02 160322].wav.asd  7-Audio 0001 [2026-06-02 161040].wav.asd  8-Audio 0001 [2026-06-03 185314].wav.asd  manifest.json
